78% testów ukończone